adds basic html layout

--- a/index.html
+++ b/index.html
@@ -4,11 +4,65 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Pixel Perfect</title>
+
+    <script src="https://kit.fontawesome.com/66e79a73bd.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="assets/css/normalize.css">
     <link rel="stylesheet" href="assets/css/styles.css">
 </head>
+
 <body>
-    
+    <nav class="top-bar">
+        <ul class="links">
+            <li><a href="#" class="website-nav-link">home</a></li>
+            <li><a href="#" class="website-nav-link">portfolio</a></li>
+            <li><a href="#" class="website-nav-link">travel</a></li>
+            <li><a href="#" class="website-nav-link">about me</a></li>
+            <li><a href="#" class="website-nav-link">contact</a></li>
+        </ul>
+        <ul class="social">
+            <li><a href="#" class="fa fa-facebook"></a></li>
+            <li><a href="#" class="fa fa-twitter"></a></li>
+            <li><a href="#" class="fa fa-instagram"></a></li>
+            <li><a href="#" class="fa fa-pinterest"></a></li>
+            <li><a href="#" class="fa fa-google"></a></li>
+        </ul>
+        <div class="search"><a href="#" class="fa-solid fa-magnifying-glass"></a></div>
+    </nav>
+    <main class="core">
+        <!-- start main-bar -->
+        <section class="main-bar">
+            <!-- start main-article 1 -->
+            <article class="main-article">
+                <img src="" alt="" class="main-article-img">
+                <h3 class="article-category"></h3>
+                <h1 class="main-article-title"></h1>
+                <p class="main-article-preview"></p>
+                <button type="button" class="continue"></button>
+                <div class="article-footer">
+                    <span class="author"><a href="" class="author-name"></a></span>
+                    <ul class="social-links">
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                    </ul>
+                </div>
+            </article>
+            <!-- end main-article 1 -->
+        </section>
+        <!-- end main-bar -->
+
+        <!-- start sidebar -->
+        <section class="sidebar">
+            <article class="sidebar-id">
+
+            </article>
+        </section>
+        <!-- end sidebar -->
+    </main>
+
+    <footer class="bottom-bar"></footer>
 </body>
 </html>
