--- a/index.html
+++ b/index.html
@@ -13,21 +13,23 @@
 
 <body>
     <nav class="top-bar">
-        <ul class="links">
-            <li><a href="#" class="website-nav-link">home</a></li>
-            <li><a href="#" class="website-nav-link">portfolio</a></li>
-            <li><a href="#" class="website-nav-link">travel</a></li>
-            <li><a href="#" class="website-nav-link">about me</a></li>
-            <li><a href="#" class="website-nav-link">contact</a></li>
-        </ul>
-        <ul class="social">
-            <li><a href="#" class="fa fa-facebook"></a></li>
-            <li><a href="#" class="fa fa-twitter"></a></li>
-            <li><a href="#" class="fa fa-instagram"></a></li>
-            <li><a href="#" class="fa fa-pinterest"></a></li>
-            <li><a href="#" class="fa fa-google"></a></li>
-        </ul>
-        <div class="search"><a href="#" class="fa-solid fa-magnifying-glass"></a></div>
+        <div class="nav-bar">
+            <ul class="links">
+                <li><a href="#" class="website-nav-link">home</a></li>
+                <li><a href="#" class="website-nav-link">portfolio</a></li>
+                <li><a href="#" class="website-nav-link">travel</a></li>
+                <li><a href="#" class="website-nav-link">about me</a></li>
+                <li><a href="#" class="website-nav-link">contact</a></li>
+            </ul>
+            <ul class="social">
+                <li><a href="#" class="fa fa-facebook"></a></li>
+                <li><a href="#" class="fa fa-twitter"></a></li>
+                <li><a href="#" class="fa fa-instagram"></a></li>
+                <li><a href="#" class="fa fa-pinterest"></a></li>
+                <li><a href="#" class="fa fa-google"></a></li>
+                <li class="search"><a href="#" class="fa-solid fa-magnifying-glass"></a></li>
+            </ul>
+        </div>
     </nav>
     <main class="core">
         <!-- start main-bar -->
