adds main page skeleton

--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
     <nav class="top-bar">
         <div class="nav-bar">
             <ul class="links">
-                <li><a href="#" class="website-nav-link">home</a></li>
-                <li><a href="#" class="website-nav-link">portfolio</a></li>
-                <li><a href="#" class="website-nav-link">travel</a></li>
-                <li><a href="#" class="website-nav-link">about me</a></li>
-                <li><a href="#" class="website-nav-link">contact</a></li>
+                <li><a href="#" class="website-nav-link">Home</a></li>
+                <li><a href="#" class="website-nav-link">Portfolio</a></li>
+                <li><a href="#" class="website-nav-link">Travel</a></li>
+                <li><a href="#" class="website-nav-link">About Me</a></li>
+                <li><a href="#" class="website-nav-link">Contact</a></li>
             </ul>
             <ul class="social">
                 <li><a href="#" class="fa fa-facebook"></a></li>
@@ -36,19 +36,19 @@
         <section class="main-bar">
             <!-- start main-article 1 -->
             <article class="main-article">
-                <img src="" alt="" class="main-article-img">
-                <h3 class="article-category"></h3>
-                <h1 class="main-article-title"></h1>
-                <p class="main-article-preview"></p>
-                <button type="button" class="continue"></button>
+                <img src="../pixel-perfect/assets/images/city-img.jpg" alt="" class="main-article-img">
+                <h3 class="article-category">Travel</h3>
+                <h1 class="main-article-title">Adventure to the city</h1>
+                <p class="main-article-preview">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolorum minima illo ad eaque quam obcaecati earum sit quae quo expedita magnam maiores, assumenda mollitia a eligendi libero iusto placeat itaque.</p>
+                <button type="button" class="continue">Continue Reading</button>
                 <div class="article-footer">
-                    <span class="author"><a href="" class="author-name"></a></span>
+                    <span class="author">By <a href="" class="author-name">Gregg</a> On October 13, 2021</span>
                     <ul class="social-links">
-                        <li></li>
-                        <li></li>
-                        <li></li>
-                        <li></li>
-                        <li></li>
+                        <li><a href="#" class="fa fa-facebook"></a></li>
+                        <li><a href="#" class="fa fa-twitter"></a></li>
+                        <li><a href="#" class="fa fa-instagram"></a></li>
+                        <li><a href="#" class="fa fa-pinterest"></a></li>
+                        <li><a href="#" class="fa fa-google"></a></li>
                     </ul>
                 </div>
             </article>
@@ -59,7 +59,17 @@
         <!-- start sidebar -->
         <section class="sidebar">
             <article class="sidebar-id">
-
+                <img class="id-background" src="#" alt="">
+                <img src="" alt="" class="id-profile">
+                <h2></h2>
+                <p></p>
+                <ul class="id-social-links">
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                </ul>
             </article>
         </section>
         <!-- end sidebar -->
