adds styling for main article

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <li><a href="#" class="fa fa-twitter"></a></li>
                 <li><a href="#" class="fa fa-instagram"></a></li>
                 <li><a href="#" class="fa fa-pinterest"></a></li>
-                <li><a href="#" class="fa fa-google"></a></li>
+                <li><a href="#" class="fa fa-google-plus"></a></li>
                 <li class="search"><a href="#" class="fa-solid fa-magnifying-glass"></a></li>
             </ul>
         </div>
@@ -39,16 +39,20 @@
                 <img src="../pixel-perfect/assets/images/city-img.jpg" alt="" class="main-article-img">
                 <h3 class="article-category">Travel</h3>
                 <h1 class="main-article-title">Adventure to the city</h1>
-                <p class="main-article-preview">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolorum minima illo ad eaque quam obcaecati earum sit quae quo expedita magnam maiores, assumenda mollitia a eligendi libero iusto placeat itaque.</p>
+                <p class="main-article-preview">Lorem ipsum dolor sit amet, consete tur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut
+                    labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores
+                    et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem
+                    ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et
+                    dolore magna aliquyam erat, sed diam voluptua...</p>
                 <button type="button" class="continue">Continue Reading</button>
                 <div class="article-footer">
                     <span class="author">By <a href="" class="author-name">Gregg</a> On October 13, 2021</span>
                     <ul class="social-links">
                         <li><a href="#" class="fa fa-facebook"></a></li>
                         <li><a href="#" class="fa fa-twitter"></a></li>
-                        <li><a href="#" class="fa fa-instagram"></a></li>
                         <li><a href="#" class="fa fa-pinterest"></a></li>
-                        <li><a href="#" class="fa fa-google"></a></li>
+                        <li><a href="#" class="fa fa-google-plus"></a></li>
+                        <li><a href="#" class="fa fa-instagram"></a></li>
                     </ul>
                 </div>
             </article>
