adds sidebar id element

--- a/index.html
+++ b/index.html
@@ -57,25 +57,121 @@
                 </div>
             </article>
             <!-- end main-article 1 -->
+            <!-- start main-article 2 -->
+            <article class="main-article">
+                <img src="../pixel-perfect/assets/images/sea-life.jpg" alt="" class="main-article-img">
+                <h3 class="article-category">Travel</h3>
+                <h1 class="main-article-title">Searching for Amy</h1>
+                <p class="main-article-preview">Sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, Lorem ipsum dolor
+                    sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore
+                    magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet
+                    clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. sed diam voluptua Lorem
+                    ipsum dolor sit amet, consetetur sadipscing elitr...</p>
+                <button type="button" class="continue">Continue Reading</button>
+                <div class="article-footer">
+                    <span class="author">By <a href="" class="author-name">Corey</a> On September 12, 2021</span>
+                    <ul class="social-links">
+                        <li><a href="#" class="fa fa-facebook"></a></li>
+                        <li><a href="#" class="fa fa-twitter"></a></li>
+                        <li><a href="#" class="fa fa-pinterest"></a></li>
+                        <li><a href="#" class="fa fa-google-plus"></a></li>
+                        <li><a href="#" class="fa fa-instagram"></a></li>
+                    </ul>
+                </div>
+            </article>
+            <!-- end main-article 2 -->
+            <!-- start main-article 3 -->
+            <article class="main-article">
+                <img src="../pixel-perfect/assets/images/tropical-bird.jpg" alt="" class="main-article-img">
+                <h3 class="article-category">Travel</h3>
+                <h1 class="main-article-title">The Rasin at the End of the Hot Dog</h1>
+                <p class="main-article-preview">Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Sed diam nonumy
+                    eirmod tempor invidunt ut labore et dolore magna aliquyam erat, Lorem ipsum dolor sit amet,
+                    consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna
+                    aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. sed diam
+                    voluptua Lorem ipsum dolor sit sadipscing elitr amet, consetetur ...</p>
+                <button type="button" class="continue">Continue Reading</button>
+                <div class="article-footer">
+                    <span class="author">By <a href="" class="author-name">Ryan</a> On December 29, 2020</span>
+                    <ul class="social-links">
+                        <li><a href="#" class="fa fa-facebook"></a></li>
+                        <li><a href="#" class="fa fa-twitter"></a></li>
+                        <li><a href="#" class="fa fa-pinterest"></a></li>
+                        <li><a href="#" class="fa fa-google-plus"></a></li>
+                        <li><a href="#" class="fa fa-instagram"></a></li>
+                    </ul>
+                </div>
+            </article>
+            <!-- end main-article 3 -->
+            <!-- start main-article 4 -->
+            <article class="main-article">
+                <img src="../pixel-perfect/assets/images/fireworks.jpg" alt="" class="main-article-img">
+                <h3 class="article-category">Travel</h3>
+                <h1 class="main-article-title">America the Beautiful</h1>
+                <p class="main-article-preview">Magna aliquyam erat, Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit
+                    amet. Sed diam nonumy eirmod tempor invidunt ut labore et dolore. Lorem ipsum dolor sit amet,
+                    consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna
+                    aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. sed diam
+                    voluptua Lorem ipsum dolor sit sadipscing elitr amet, consetetur ...</p>
+                <button type="button" class="continue">Continue Reading</button>
+                <div class="article-footer">
+                    <span class="author">By <a href="" class="author-name">Adam</a> On June 24, 2020</span>
+                    <ul class="social-links">
+                        <li><a href="#" class="fa fa-facebook"></a></li>
+                        <li><a href="#" class="fa fa-twitter"></a></li>
+                        <li><a href="#" class="fa fa-pinterest"></a></li>
+                        <li><a href="#" class="fa fa-google-plus"></a></li>
+                        <li><a href="#" class="fa fa-instagram"></a></li>
+                    </ul>
+                </div>
+            </article>
+            <!-- end main-article 4 -->
         </section>
         <!-- end main-bar -->
 
         <!-- start sidebar -->
         <section class="sidebar">
+            <!-- start sidebar id -->
             <article class="sidebar-id">
-                <img class="id-background" src="#" alt="">
-                <img src="" alt="" class="id-profile">
-                <h2></h2>
-                <p></p>
+                <img src="../pixel-perfect/assets/images/id-picture.jpg" alt="" class="id-profile">
+                <img class="id-background" src="../pixel-perfect/assets/images/id-background.jpg" alt="">
+                <h2>Mattie Grant</h2>
+                <p>Mattie Grant is an enthusiastic and
+                    passionate Story Teller. She loves to do
+                    different home-made things and share to the world.</p>
                 <ul class="id-social-links">
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
+                    <li><a href="#" class="fa fa-facebook"></a></li>
+                    <li><a href="#" class="fa fa-twitter"></a></li>
+                    <li><a href="#" class="fa fa-google-plus"></a></li>
+                    <li><a href="#" class="fa fa-linkedin"></a></li>
+                    <li><a href="#" class="fa fa-instagram"></a></li>
                 </ul>
             </article>
+             <!-- end sidebar id -->
+            <!-- start sidebar popular -->
+            <article>
+                <h2>Popular</h2>
+                <ul>
+                    <li class="popular-post">
+                        <img src="" alt="">
+                        <p></p>
+                        <p></p>
+                    </li>
+                    <li class="popular-post">
+                        <img src="" alt="">
+                        <p></p>
+                        <p></p>
+                    </li>
+                    <li class="popular-post">
+                        <img src="" alt="">
+                        <p></p>
+                        <p></p>
+                    </li>
+                </ul>
+            </article>
+            <!-- start sidebar popular -->
         </section>
+       
         <!-- end sidebar -->
     </main>
 
