adds instagram feed sidebar element

--- a/index.html
+++ b/index.html
@@ -204,6 +204,18 @@
                     </div>
                 </section>
             </article>
+            <!-- end sidebar latest posts -->
+            <article class="instagram-feed">
+                <h2>Instagram feed</h2>
+                <div class="image-container">
+                    <img src="../pixel-perfect/assets/images/city-post.jpg" alt="">
+                    <img src="../pixel-perfect/assets/images/dog.jpg" alt="">
+                    <img src="../pixel-perfect/assets/images/plateau.jpg" alt="">
+                    <img src="../pixel-perfect/assets/images/travel-ocean.jpg" alt="">
+                    <img src="../pixel-perfect/assets/images/street.jpg" alt="">
+                    <img src="../pixel-perfect/assets/images/tour-car.jpg" alt="">
+                </div>
+            </article>
         </section>
        
         <!-- end sidebar -->
