adds footer and page navigation elements

--- a/index.html
+++ b/index.html
@@ -126,6 +126,15 @@
                 </div>
             </article>
             <!-- end main-article 4 -->
+            <article class="page-navigation">
+                <ul class="page-links">
+                    <li><a href="#" class="page-number one">1</a></li>
+                    <li><a href="#" class="page-number two">2</a></li>
+                    <li><a href="#" class="page-number three">3</a></li>
+                    <li><a href="#" class="page-number four">4</a></li>
+                    <li><a href="#" class="fa-solid fa-angles-right"></a></li>
+                </ul>
+            </article>
         </section>
         <!-- end main-bar -->
 
@@ -221,6 +230,18 @@
         <!-- end sidebar -->
     </main>
 
-    <footer class="bottom-bar"></footer>
+    <footer class="footer">
+        <h2>Follow@ Instagram</h2>
+        <div class="footer-images">
+            <img src="../pixel-perfect/assets/images/city-post.jpg" alt="">
+            <img src="../pixel-perfect/assets/images/dog.jpg" alt="">
+            <img src="../pixel-perfect/assets/images/plateau.jpg" alt="">
+            <img src="../pixel-perfect/assets/images/travel-ocean.jpg" alt="">
+            <img src="../pixel-perfect/assets/images/street.jpg" alt="">
+            <img src="../pixel-perfect/assets/images/tour-car.jpg" alt="">
+            <img src="../pixel-perfect/assets/images/city-snow.jpg" alt="">
+            <img src="../pixel-perfect/assets/images/ship.jpg" alt="">
+        </div>
+    </footer>
 </body>
 </html>
