adds initial mobile formatting

--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
                 <li><a href="#" class="fa fa-google-plus"></a></li>
                 <li class="search"><a href="#" class="fa-solid fa-magnifying-glass"></a></li>
             </ul>
+            <div class="mobile-dropdown">
+                <span><i class="fa-solid fa-bars"></i></span>
+            </div>
         </div>
     </nav>
     <main class="core">
@@ -296,7 +299,7 @@
     </main>
 
     <footer class="footer">
-        <h2>Follow@ Instagram</h2>
+        <h2>Follow@ <a href="">Instagram</a></h2>
         <div class="footer-images">
             <a href="#">
                 <div class="image-wrapper">
