adds small changes to mobile spacing

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <li class="search"><a href="#" class="fa-solid fa-magnifying-glass"></a></li>
             </ul>
             <div class="mobile-dropdown">
-                <span><i class="fa-solid fa-bars"></i></span>
+                <i class="fa-solid fa-bars"></i>
             </div>
         </div>
     </nav>
