adds mobile responsive navbar and dropdown

--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@
                 <li class="search"><a href="#" class="fa-solid fa-magnifying-glass"></a></li>
             </ul>
             <div class="mobile-dropdown">
-                <i class="fa-solid fa-bars"></i>
+                <span class="bar"></span>
+                <span class="bar"></span>
+                <span class="bar"></span>
             </div>
         </div>
     </nav>
@@ -142,7 +144,7 @@
         <!-- end main-bar -->
 
         <!-- start sidebar -->
-        <section class="sidebar">
+        <aside class="sidebar">
             <!-- start sidebar id -->
             <article class="sidebar-id">
                 <img src="../pixel-perfect/assets/images/id-picture.jpg" alt="" class="id-profile">
@@ -293,7 +295,7 @@
                     </a>
                 </div>
             </article>
-        </section>
+        </aside>
        
         <!-- end sidebar -->
     </main>
@@ -351,5 +353,6 @@
             </a>
         </div>
     </footer>
+    <script src="../pixel-perfect/assets/js/main.js"></script>
 </body>
 </html>
