adds scroll to top element

--- a/index.html
+++ b/index.html
@@ -353,6 +353,9 @@
             </a>
         </div>
     </footer>
+    <nav class="return-top">
+        <a href="#"><i class="fa-solid fa-chevron-up"></i></a>
+    </nav>
     <script src="../pixel-perfect/assets/js/main.js"></script>
 </body>
 </html>
